# ChatRoomNix

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-and-release.yml
ChatRoomClient/: _cr_messages.py  _cr_utility.py  cr_client.py  test_client.py
ChatRoomServer/: CMakeLists.txt  build_run.sh  cr_tester.c  server.crt  server.csr  server.key  users.txt
ChatRoomServer/algorithms_lib/: CMakeLists.txt  algorithms.c  algorithms.h
ChatRoomServer/cll_lib/: CMakeLists.txt  cll.c  cll.h
ChatRoomServer/h_table_lib/: CMakeLists.txt  h_table.c  h_table.h
ChatRoomServer/include/: CMakeLists.txt  cr_chats.h  cr_listener.h  cr_main.h  cr_msg.h  cr_rooms.h  cr_session_manager.h  cr_shared.h  cr_users.h
ChatRoomServer/networking_lib/: CMakeLists.txt  networking.c  networking.h
ChatRoomServer/queue_lib/: CMakeLists.txt  queue.c  queue.h
ChatRoomServer/src/: CMakeLists.txt  cr_chats.c  cr_listener.c  cr_main.c  cr_msg.c  cr_rooms.c  cr_session_manager.c  cr_shared.c  cr_users.c
ChatRoomServer/t_pool_lib/: CMakeLists.txt  t_pool.c  t_pool.h
chatroomclient/: cr_client.py  test_client.py
chatroomclient_rename/: _cr_messages.py  _cr_utility.py
chatroomserver/: build_run.sh  config.txt  cr_tester.c  gen_certs_run.sh  server.crt
chatroomserver/algorithms_lib/: CMakeLists.txt  algorithms.c  algorithms.h
chatroomserver/cll_lib/: CMakeLists.txt  cll.c
chatroomserver/h_table_lib/: CMakeLists.txt  h_table.c
chatroomserver/include/: CMakeLists.txt  cr_msg.h  cr_rooms.h  cr_session_manager.h
chatroomserver/networking_lib/: networking.h
chatroomserver/queue_lib/: CMakeLists.txt  queue.h
chatroomserver/src/: cr_chats.c  cr_listener.c  cr_main.c  cr_msg.c  cr_rooms.c  cr_session_manager.c  cr_shared.c
chatroomserver/t_pool_lib/: t_pool.c
chatroomserver_rename/: CMakeLists.txt  build.sh  server.csr  server.key
chatroomserver_rename/cll_lib/: cll.h
chatroomserver_rename/h_table_lib/: h_table.h
chatroomserver_rename/include/: cr_chats.h  cr_listener.h  cr_main.h  cr_shared.h  cr_users.h
chatroomserver_rename/networking_lib/: CMakeLists.txt  networking.c
chatroomserver_rename/queue_lib/: queue.c
chatroomserver_rename/src/: CMakeLists.txt  cr_users.c
chatroomserver_rename/t_pool_lib/: CMakeLists.txt  t_pool.h
